<resources>
    <!-- App -->
    <string name="app_name" translatable="false">terminus</string>
    <string name="version" translatable="false">v.1.3</string>
    <string name="currency" translatable="false">$</string>
    <string name="english">English</string>
    <string name="norwegian">Norwegian</string>
    <string name="title_calendar">Calendar</string>
    <string name="new_shift">New shift</string>
    <string name="title_earnings">Pay</string>
    <string name="title_settings">Settings</string>
    <string name="title_view_event">Workday</string>
    <string name="title_salary_rule">Pay increases</string>
    <string name="title_job">Job</string>
    <string name="title_new_shift">New shift</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="today">Today</string>
    <string name="tonight">tonight</string>
    <string name="tomorrow">tomorrow</string>
    <string name="pay">Pay</string>
    <!--Months-->
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">Juli</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>

    <!--Salary page -->
    <string name="total_yearly_salary_gross">Total salary this year</string>
    <string name="total_yearly_salary_net">Total net salary</string>
    <string name="total_monthly_salary_gross">Monthly pay</string>
    <string name="total_monthly_salary_net"> Monthly net pay</string>
    <string name="tax">Tax</string>
    <string name="total_hours">Total hours</string>
    <string name="paycheck">Paycheck</string>
    <string name="paycheck_period">Pay in period</string>
    <string name="choose_tax_method">Choose tax method</string>
    <string name="vacationpay">Vacationpay</string>
    <string name="table">Table</string>
    <string name="tax_table">Tax table</string>
    <string name="choose_tax_table">Choose tax-table</string>
    <string name="error_eneter_tax_percentage">Please enter tax percentage</string>
    <string name="error_eneter_tax_table">Please choose a tax table</string>
    <string name="error_choose_a_tax_option">Please choose a tax option</string>
    <string name="vactaion_pay_notice">Net monthly pay is subtracted 10,2% of gross pay (vacation pay).</string>
    <string name="yearly_earnings">Yearly salary</string>
    <string name="salary_of_month">Salary for</string>

    <!--Settings -->
    <string name="settings">Settings</string>
    <string name="administer">Administer</string>
    <string name="about">About</string>
    <string name="about_info">Made by Marcus B. Birkeland</string>
    <string name="choose_language">Choose language</string>
    <string name="choose_currency">Choose currency</string>
    <string name="administer_jobs">Administer jobs</string>
    <string name="administer_shifts">Administer shifts</string>
    <string name="delete_all">Delete all data</string>
    <string name="delte_dialog">Do you want to delete all jobs and shifts?</string>
    <string name="confirm_delete_all">Yes, delete all</string>
    <string name="other_settings">Other</string>
    <string name="nightmode">Night-mode</string>

    <!--Create event activity -->
    <string name="pick_time">Pick time</string>
    <string name="break_time">Break</string>
    <string name="workplace">Workplace</string>
    <string name="choose_workplace">Choose job</string>
    <string name="add_workday">New shift</string>
    <string name="nightshift">Night-shift</string>
    <string name="repeat">Repeat</string>
    <string name="each_week">Each week</string>
    <string name="every_other_week">Every other week</string>
    <string name="For">For</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="overtime">Overtime</string>
    <string name="error_pick_other_time">Start and end time cannot be equal</string>
    <string name="error_check_nightshift">Check box for night-shift!</string>
    <string name="error_uncheck_nightshift">Uncheck box for night-shift!</string>
    <string name="error_pick_job">Pick a job first!</string>
    <string name="dialog_edit_shift">Edit shift?</string>
    <string name="edit_equal_shifts">Edit all equal shifts</string>
    <string name="edit_shift_description">If you choose "Edit equal shifts", equal events in the future will be altered.</string>
    <string name="note">Note</string>
    <string name="color">Color</string>
    <string name="repeat_for">Repeat for:</string>
    <string name="months_repeat">month(s)</string>
    <string name="set_overtime">Set pay increase in percentage:</string>
    <string name="repeats">Repeats</string>
    <string name="for_repeat"> for</string>
    <string name="pick_color">Pick color</string>
    <string name="write_note">Write note here...</string>
    <string name="week">Week</string>
    <string name="hour">hour</string>
    <!--DialogFragment pick job-->
    <string name="pick_job">Pick job</string>
    <string name="new_job">New job</string>
    <string name="add_new_job">Add new job</string>

    <!--Create job activity -->
    <string name="add_job">Add job</string>
    <string name="job_name">Job name</string>
    <string name="salary">Hourly salary</string>
    <string name="salary_period">Paycheck period</string>
    <string name="pick_date">Pick date</string>
    <string name="salary_period_desc">each month</string>
    <string name="salary_rules">Pay increases / decreases</string>
    <string name="paid_break">Paid break</string>
    <string name="error_enter_job_name">Give your job a name</string>
    <string name="error_enter_salary">Enter salary</string>
    <string name="error_job_already_exists">This job already exists!</string>
    <string name="edit_job_title">Edit job</string>
    <string name="dialog_delete_job">Delete job?
       Only future shifts with this job will be deleted.</string>
    <string name="dialog_edit_job">Edit job? Salary will only be adjusted for future shifts"</string>
    <!--Create salary-rule activity -->
    <string name="pay_increases_title">Add pay decrease / increase</string>
    <string name="name">Name</string>
    <string name="pay_difference">Difference in pay</string>
    <string name="weekdays">Weekdays</string>
    <string name="saturday">Saturdays</string>
    <string name="sundays">Sundays</string>

    <!--Misc.-->
    <string name="delete_shift">Delete shift</string>
    <string name="delete_shift_description">If you choose "Delete equal shifts", all future, equal events will be altered.</string>
    <string name="delete_equal_shifts">Delete equal shifts</string>
    <string name="overtime_message">Pay increases and decreases do not count when overtime is active</string>
    <string name="all_shifts">All shifts</string>
    <string name="all_active_jobs">All active jobs</string>
    <string name="pick_language">Choose language</string>
    <string name="currency_text">Currency</string>
    <string name="currency_hint">$</string>
    <string name="currency_dialog_text">Enter your currency. - ($ , € , £ , kr)</string>

</resources>
