<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:checkedButton="@id/toggleRadioButtonEveryWeek"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/toggleRadioButtonEveryWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/each_week" />

            <RadioButton
                android:id="@+id/toggleRadioButtonEveryOtherWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/every_other_week" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/repeat_for"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <EditText
            android:id="@+id/editTextNumMonths"
            android:layout_width="66dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="1"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/months_repeat"
            app:layout_constraintBottom_toBottomOf="@+id/editTextNumMonths"
            app:layout_constraintStart_toEndOf="@+id/editTextNumMonths"
            app:layout_constraintTop_toTopOf="@+id/editTextNumMonths" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>