<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tax"
            app:layout_constraintStart_toStartOf="@+id/editTextTaxPercentage"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioButtonTaxPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTaxPercentage"
            app:layout_constraintEnd_toStartOf="@+id/editTextTaxPercentage"
            app:layout_constraintTop_toTopOf="@+id/editTextTaxPercentage" />

        <RadioButton
            android:id="@+id/radioButtonTaxTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewPickTaxTable"
            app:layout_constraintEnd_toStartOf="@+id/editTextTaxPercentage"
            app:layout_constraintTop_toTopOf="@+id/textView420" />

        <EditText
            android:id="@+id/editTextTaxPercentage"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%"
            android:textColor="?attr/textColor"
            android:textSize="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTaxPercentage"
            app:layout_constraintStart_toEndOf="@+id/editTextTaxPercentage"
            app:layout_constraintTop_toTopOf="@+id/editTextTaxPercentage" />

        <TextView
            android:id="@+id/textView420"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/tax_table"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/editTextTaxPercentage" />

        <TextView
            android:id="@+id/textViewPickTaxTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/choose_tax_table"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView420"
            app:layout_constraintTop_toBottomOf="@+id/textView420"
            tools:text="Velg skattetabell" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>